[gd_scene load_steps=7 format=3 uid="uid://pgvcatfddydy"]

[ext_resource type="Script" uid="uid://cvsl1e0je7jf6" path="res://addons/sky_weather/sky_weather.gd" id="1_sky"]
[ext_resource type="Script" uid="uid://c532kcedgj7qb" path="res://addons/sky_weather/demo/demo.gd" id="2_demo"]
[ext_resource type="Resource" path="res://addons/sky_weather/presets/clear.tres" id="3_clear"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_o7o66"]
sky_top_color = Color(0.3, 0.5, 0.9, 1)
sky_horizon_color = Color(0.7, 0.8, 0.9499999, 1)
ground_bottom_color = Color(0.4, 0.35, 0.3, 1)
ground_horizon_color = Color(0.48999998, 0.56, 0.66499996, 0.7)
sun_angle_max = 1.0

[sub_resource type="Sky" id="Sky_myyeh"]
sky_material = SubResource("ProceduralSkyMaterial_o7o66")

[sub_resource type="Environment" id="Environment_jot0q"]
background_mode = 2
sky = SubResource("Sky_myyeh")
ambient_light_source = 3
ambient_light_color = Color(0.85, 0.9, 0.97499996, 1)
reflected_light_source = 2
tonemap_mode = 2
fog_light_color = Color(0.7, 0.7, 0.75, 1)
fog_density = 0.0
fog_aerial_perspective = 0.5

[node name="Demo" type="Node3D"]

[node name="SkyWeather" type="Node3D" parent="."]
script = ExtResource("1_sky")
day_duration_minutes = 0.0
weather = ExtResource("3_clear")

[node name="Sun" type="DirectionalLight3D" parent="SkyWeather"]
transform = Transform3D(1, 0, 0, 0, 0.39874908, 0.9170601, 0, -0.9170601, 0.39874908, 0, 0, 0)
light_color = Color(0.90999997, 0.905, 0.91499996, 1)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="SkyWeather"]
environment = SubResource("Environment_jot0q")

[node name="Ground" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
size = Vector3(100, 1, 100)

[node name="TestCube" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
size = Vector3(2, 2, 2)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9, 0.44, 0, -0.44, 0.9, 0, 6, 12)

[node name="DemoUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_demo")

[node name="Panel" type="PanelContainer" parent="DemoUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -220.0
offset_right = 250.0
offset_bottom = -20.0
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="DemoUI/Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="DemoUI/Panel/VBox"]
layout_mode = 2
text = "Sky Weather Demo"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="DemoUI/Panel/VBox"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="DemoUI/Panel/VBox"]
layout_mode = 2
text = "12:00"
horizontal_alignment = 1

[node name="TimeSlider" type="HSlider" parent="DemoUI/Panel/VBox"]
layout_mode = 2
max_value = 24.0
step = 0.1
value = 12.0

[node name="PeriodLabel" type="Label" parent="DemoUI/Panel/VBox"]
layout_mode = 2
text = "Day"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="DemoUI/Panel/VBox"]
layout_mode = 2

[node name="WeatherLabel" type="Label" parent="DemoUI/Panel/VBox"]
layout_mode = 2
text = "Weather: Clear"
horizontal_alignment = 1

[node name="WeatherButtons" type="HBoxContainer" parent="DemoUI/Panel/VBox"]
layout_mode = 2

[node name="Clear" type="Button" parent="DemoUI/Panel/VBox/WeatherButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clear"

[node name="Overcast" type="Button" parent="DemoUI/Panel/VBox/WeatherButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Overcast"

[node name="WeatherButtons2" type="HBoxContainer" parent="DemoUI/Panel/VBox"]
layout_mode = 2

[node name="Foggy" type="Button" parent="DemoUI/Panel/VBox/WeatherButtons2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Foggy"

[node name="Rainy" type="Button" parent="DemoUI/Panel/VBox/WeatherButtons2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rainy"

[connection signal="value_changed" from="DemoUI/Panel/VBox/TimeSlider" to="DemoUI" method="_on_time_slider_value_changed"]
[connection signal="pressed" from="DemoUI/Panel/VBox/WeatherButtons/Clear" to="DemoUI" method="_on_clear_pressed"]
[connection signal="pressed" from="DemoUI/Panel/VBox/WeatherButtons/Overcast" to="DemoUI" method="_on_overcast_pressed"]
[connection signal="pressed" from="DemoUI/Panel/VBox/WeatherButtons2/Foggy" to="DemoUI" method="_on_foggy_pressed"]
[connection signal="pressed" from="DemoUI/Panel/VBox/WeatherButtons2/Rainy" to="DemoUI" method="_on_rainy_pressed"]
